added nodemon | added swagger | added concurrently
